--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <body>
     <nav class="navbar">
         <div class="profile">
-            <img src="./image/img1.jpg" alt="Profile">
+            <img src="imagejpg" alt="Profile">
             <div>
                 <h2>Mithuna Sri A</h2>
                 <p>Aspiring Web Developer | BSc Computer Technology.</p>
