--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     
     <div class="container">
         <div class="card">
-            <img src="./image/img1.jpg" alt="Profile">
+            <img src="image.jpg" alt="Profile">
             <div class="info">
                 <h2>Mithuna Sri A</h2>
                 <p>web Developer | Front-end Developer</p>
