--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
             </div>
         </div>
         <ul class="nav-links">
+            <li><a href="#aboutme">AboutMe</a></li>
+            <li><a href="#project">Project</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
